# eg

./: CLAUDE.md  Cargo.toml  README-MCP.md  book.toml  test_mcp.py
.cargo/: config.toml
examples/: basic_usage.rs
md/: SUMMARY.md  introduction.md
md/design/: overview.md  rust.md
md/references/: cargo-cache-access.md
setup/: Cargo.toml
setup/src/: main.rs
src/: error.rs  lib.rs
src/rust/: cache.rs  extraction.rs  github.rs  mod.rs  search.rs  version.rs
tests/: integration_tests.rs  mcp_integration.rs
