[package]
name = "setup"
version = "0.1.0"
edition = "2021"
authors = ["Niko Matsakis"]
description = "eg library MCP server setup tool"

[[bin]]
name = "setup"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
which = "6.0"
home = "0.5"
